--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@jesusrugama/stencil-design-system": "^0.1.2",
+    "@jesusrugama/stencil-design-system": "file:../../stencil-design-system",
     "next": "15.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
